Remove logos in login page and fix titles alignment

--- a/autosalud/src/pages/auth/auth.scss
+++ b/autosalud/src/pages/auth/auth.scss
@@ -46,14 +46,4 @@ page-auth {
       font-size: 100%;
       margin-top: 10%;
     }
-
-    #logoBcoPichincha{
-      margin-left: 15px;
-    }
-    #logoCrisfe{
-      margin-left: 15px;
-    }
-    #logoEspol{
-      margin-right: 15px;
-    }
 }
